--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "yarn install && eslint ./app/* index.js && yarn start",
-    "start": "node index.js",
+    "start": "eslint ./app/* index.js && node index.js",
     "test": "mocha",
     "lint": "eslint ./app/* index.js"
   },
